<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/notes_editor_layout">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:menu="@menu/editor_menu"
            app:navigationIcon="@drawable/baseline_close_24"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Scrollable content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notes_editor_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".NotesEditor">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:ellipsize="start"
                android:enabled="true"
                android:focusable="auto"
                android:hint="@string/note_title_editor_label"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_note_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_content_editor_label"
                android:inputType="textMultiLine|text|textAutoComplete|textImeMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/editor_snackbar_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>